2004-12-10  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-12-09  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2004-12-09  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added da (Danish) to ALL_LINGUAS.

2004-12-08  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Russian to ALL_LINGUAS.

2004-12-07  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2004-12-07  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2004-12-06  Mark McLoughlin  <mark@skynet.ie>

	Leak pointed out by Vincent Untz <vincent@vuntz.net>

	* libmenu/menu-tree.c: (load_merge_file): free freeme.

2004-12-06  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-tree.c:
	(menu_tree_add_menu_file_monitor): add anal
	assertion.
	(menu_tree_force_recanonicalize): remove the
	menu file monitors whether the we've previously
	found a menu file or not.
	(find_path): handle the root path correctly.

2004-12-05  Simos Xenitellis  <user@kl.asia.com>

	* configure.in: Added "el" to ALL_LINGUAS.

2004-12-05  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added "lt" to ALL_LINGUAS.

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2004-12-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libmenu/desktop-entries.c: (desktop_entry_copy):
	Copy the right string for icon field.

2004-11-30  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.9.3.

==================== 2.9.2 ====================

2004-11-30  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.9.2.

2004-11-29  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/entry-directories.c:
	(cached_dir_update_entry),
	(cached_dir_remove_subdir): fix another couple of leaks.
	
	* COPYING, COPYING.LIB: add the LGPL since autofoo
	seems determined that COPYING should be the GPL.
	